compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_gc_roots_live_values.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/gc_roots_live_values.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
early
later
stderr:
<empty>
