compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_generic_record_pattern_literal.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/generic_record_pattern_literal.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
one
stderr:
<empty>
