compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_hello.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/hello.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello world
stderr:
<empty>
