compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_inferred_function_signature.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/inferred_function_signature.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
