compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_lambda_curried_capture.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/lambda_curried_capture.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3
stderr:
<empty>
