compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_lambda_gc_captures.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/lambda_gc_captures.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
captured
stderr:
<empty>
